main/scratch_clock/errors.txt
Arduino: 1.8.17 Hourly Build 2021/09/06 02:33 (Windows 10), Vývojová deska: "Arduino Uno"





















D:\DEV\GitHub\Divergence-Meter\main\scratch_clock\scratch_clock.ino: In function 'void getTime()':

scratch_clock:135:30: error: no matching function for call to 'DS3231::getA1Time()'

     dateTime = rtc.getA1Time(); //proměnná s reálným časem z RTC modulu

                              ^

In file included from D:\DEV\GitHub\Divergence-Meter\main\scratch_clock\scratch_clock.ino:3:0:

C:\Users\Toohka\Documents\Arduino\libraries\DS3231/DS3231.h:111:8: note: candidate: void DS3231::getA1Time(byte&, byte&, byte&, byte&, byte&, bool&, bool&, bool&)

   void getA1Time(byte& A1Day, byte& A1Hour, byte& A1Minute, byte& A1Second, byte& AlarmBits, bool& A1Dy, bool& A1h12, bool& A1PM);

        ^~~~~~~~~

C:\Users\Toohka\Documents\Arduino\libraries\DS3231/DS3231.h:111:8: note:   candidate expects 8 arguments, 0 provided

scratch_clock:139:22: error: cannot convert 'DateTime::hour' from type 'uint8_t (DateTime::)() const {aka unsigned char (DateTime::)() const}' to type 'int'

     hours = dateTime.hour;

                      ^~~~

scratch_clock:140:24: error: cannot convert 'DateTime::minute' from type 'uint8_t (DateTime::)() const {aka unsigned char (DateTime::)() const}' to type 'int'

     minutes = dateTime.minute;

                        ^~~~~~

scratch_clock:141:24: error: cannot convert 'DateTime::second' from type 'uint8_t (DateTime::)() const {aka unsigned char (DateTime::)() const}' to type 'int'

     seconds = dateTime.second;

                        ^~~~~~

scratch_clock:154:18: error: expected primary-expression before ']' token

     displayArray[] = {timeDatabase[hoursOne], timeDatabase[hoursTwo], displayStroke, timeDatabase[minutesOne], timeDatabase[minutesTwo], displayStroke, timeDatabase[secondsOne], timeDatabase[secondsTwo]};

                  ^

exit status 1

no matching function for call to 'DS3231::getA1Time()'



Táto zpráva by měla mít víc informacií v
"Zobrazení podrobného výstupu při kompilaci"
podle zapnuté volby v Soubor -> Nastavení.
